--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 img {
     width: 60%;
     height: auto;
+    margin: 0px;
 }
 
 .instructors-node {
@@ -14,7 +15,6 @@ img {
     background: rgb(236, 236, 236);
     box-shadow: 2px 3px 8px #919191;
     position: relative;
-    top: 0;
     transition: 0.1s ease-in;
 }
 
