--- a/index.css
+++ b/index.css
@@ -49,6 +49,10 @@ img {
     height: 150px;
     width: 150px;
     margin: 0px;
-    padding: 20px;
+    padding: 10px;
     border: 0px;
+}
+
+#popup-container {
+    border: 1px solid black
 }
